--- a/config/database.yml
+++ b/config/database.yml
@@ -2,14 +2,12 @@ development:
   adapter: postgresql
   encoding: unicode
   database: ChessExplained_development
+  host: localhost
   pool: 5
-  username: JackMallers
-  password:
 
 test:
   adapter: postgresql
   encoding: unicode
   database: ChessExplained_test
+  host: localhost
   pool: 5
-  username: JackMallers
-  password:
